syntax = "proto3";
package Action;

message SendLongMsgReq {
  SendLongMsgInfo info = 2;
  LongMsgSettings settings = 15;
}

message SendLongMsgInfo {
  uint32 type = 1;
  LongMsgPeer peer = 2;
  uint32 groupCode = 3;
  bytes payload = 4;
}

message LongMsgPeer {
  string uid = 2;
}

message LongMsgSettings {
  uint32 field1 = 1;
  uint32 field2 = 2;
  uint32 field3 = 3;
  uint32 field4 = 4;
}

message SendLongMsgResp {
  SendLongMsgResult result = 2;
  LongMsgSettings settings = 15;
}

message SendLongMsgResult {
  string resId = 3;
}

message PullPicsReq {
  uint32 uin = 2;
  uint32 field3 = 3;
  string word = 6;
  string word2 = 7;
  uint32 field8 = 8;
  uint32 field9 = 9;
  uint32 field14 = 14;
}

message PullPicsImgInfo {
  string url = 5;
}

message PullPicsResp {
  repeated PullPicsImgInfo info = 3;
}

message RecvLongMsgReq {
  RecvLongMsgInfo info = 1;
  LongMsgSettings settings = 15;
}

message RecvLongMsgInfo {
  LongMsgPeer peer = 1;
  string resId = 2;
  bool acquire = 3;
}

message RecvLongMsgResp {
  RecvLongMsgResult result = 1;
  LongMsgSettings settings = 15;
}

message RecvLongMsgResult {
  string resId = 3;
  bytes payload = 4;
}
